--- a/lab01_intro.ipynb
+++ b/lab01_intro.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -604,7 +604,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[  5  28  78 140 158 182 159 124  62  35  13   5   7   4]\n"
+      "[  6  34  72 157 183 161 157  93  65  36  23   9   3   0   1]\n"
      ]
     }
    ],
@@ -630,22 +630,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def my_func(a):\n",
-    "    res = np.array([], dtype='int64')\n",
-    "    for i in range(len(a)):\n",
-    "        res = np.append(res, np.repeat(np.array([i], dtype='int64'), a[i]))\n",
-    "    return res"
+    "def my_func(a):    \n",
+    "    return np.repeat(range(0,len(a)), a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -656,7 +653,7 @@
        "True"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -775,23 +772,23 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 10.73189442,  10.83628325,   9.39837748,   8.54083326,\n",
-       "         10.13707054,  10.57539006,   9.41664493],\n",
-       "       [  8.95478279,   9.07518735,   9.09474535,   9.5869317 ,\n",
-       "         10.60884626,   8.95898565,   9.84816484],\n",
-       "       [  9.78871221,   9.71945777,  11.43471307,   9.8862956 ,\n",
-       "         10.50780158,   9.82170477,   9.46499793],\n",
-       "       [  9.71897792,   9.44439703,  12.07086386,   9.43431617,\n",
-       "         11.78972068,   8.24899733,  10.39018098],\n",
-       "       [ 10.23728977,  12.05030846,  11.25077488,  10.95500265,\n",
-       "         11.0334591 ,   9.13679794,  10.42261072],\n",
-       "       [ 10.9512506 ,   9.6317293 ,   8.85766118,  10.13718575,\n",
-       "          9.6492129 ,   9.25734786,   9.13944917],\n",
-       "       [  8.73737722,  10.85256206,   9.94546817,  11.90025753,\n",
-       "         11.31526216,   9.22822869,   9.87594901]])"
+       "array([[ 10.02940538,   8.82127078,   8.63262878,  11.27143979,\n",
+       "         10.07895803,   8.30753473,  11.18971026],\n",
+       "       [ 12.10035654,   8.57312185,   9.41184311,   9.58798399,\n",
+       "         10.32596224,   9.95462106,  10.32462712],\n",
+       "       [ 10.16104563,   9.82062708,   9.6005183 ,   9.64856685,\n",
+       "         10.32093338,  11.2116667 ,  10.09304653],\n",
+       "       [  8.96194499,   9.45276182,  10.544969  ,  10.13581792,\n",
+       "         12.01042197,   8.27282312,  11.29888417],\n",
+       "       [  9.61438275,  11.03158765,  10.06128901,  10.701968  ,\n",
+       "          7.50099066,  11.16190104,   9.92311352],\n",
+       "       [ 12.37204237,  10.09172327,  10.32391529,   8.41283795,\n",
+       "          8.10587938,  11.23902434,   9.95136745],\n",
+       "       [  9.0979703 ,   9.52670424,   9.36968914,  10.22669053,\n",
+       "         10.11609354,  10.51038672,   9.10840084]])"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,29 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "847.820582213034"
-      ]
-     },
-     "execution_count": 245,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(scipy.linalg.det(X))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -835,7 +810,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "70.8428669796\n"
+      "478.029896947\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(scipy.linalg.det(X))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "66.1872792886\n"
      ]
     }
    ],
@@ -845,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -854,7 +848,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(8.2489973310369304, 12.070863860157251)\n"
+      "(7.500990658670954, 12.372042366227143)\n"
      ]
     }
    ],
@@ -864,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -873,17 +867,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(26.6896712209+0j)\n"
+      "(69.8307921531+0j)\n"
      ]
     }
    ],
    "source": [
-    "print(np.max(scipy.linalg.eigvals(X.T * X)) ** 0.5)"
+    "print(np.max(scipy.linalg.eigvals(np.dot(X.T, X))) ** 0.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -892,7 +886,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "70.6032049398\n"
+      "70.1836435492\n"
      ]
     }
    ],
@@ -902,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -911,9 +905,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 70.35360455+0.j           2.22543138+0.69657984j   2.22543138-0.69657984j\n",
-      "  -0.69202150+1.13937256j  -0.69202150-1.13937256j  -0.64545019+0.j\n",
-      "  -1.93210713+0.j        ]\n"
+      "[ 69.77790937+0.j          1.08527357+2.6610476j   1.08527357-2.6610476j\n",
+      "  -2.92935515+0.j         -1.99147386+0.j         -0.23481461+0.j\n",
+      "  -0.60553360+0.j       ]\n"
      ]
     }
    ],
@@ -923,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -932,20 +926,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  5.71513560e-02  -3.36690236e-01  -2.20645780e-01   2.53454953e-01\n",
-      "   -1.41374272e-01   4.42039157e-01  -3.38123914e-02]\n",
-      " [  2.57585574e-01  -2.80598562e-01  -2.48207635e-01   4.91454570e-03\n",
-      "    2.63219448e-01  -1.63822830e-01   1.40728484e-01]\n",
-      " [ -1.61914415e-01  -1.11568866e-01   4.07605783e-01  -1.65254423e-02\n",
-      "    1.44694688e-01  -1.04463946e-01  -1.63650085e-01]\n",
-      " [ -3.17193602e-01  -1.20444449e-02   1.62451776e-01  -1.68921364e-01\n",
-      "    1.11677701e-03   2.17217373e-01   1.34280377e-01]\n",
-      " [  5.80037038e-01  -7.79738461e-01  -6.30785354e-01   7.85779594e-01\n",
-      "   -8.46463316e-01   4.71135241e-02   8.52044285e-01]\n",
-      " [  1.19007210e-01   2.21706571e-01   4.10978207e-01  -3.23142198e-01\n",
-      "   -1.83314849e-01  -1.96961253e-01  -1.27295894e-02]\n",
-      " [ -5.64129387e-01   1.41929911e+00   2.00426978e-01  -6.07797583e-01\n",
-      "    8.29886250e-01  -2.37532984e-01  -9.84802596e-01]]\n"
+      "[[ 0.5487216  -0.61548268 -0.52791737 -0.22952658 -0.69729566  0.83512689\n",
+      "   0.74052207]\n",
+      " [ 1.82846638 -3.13499047 -0.62529206 -0.42325857 -2.09622182  2.52659384\n",
+      "   2.04855207]\n",
+      " [-1.3498818   1.80878347 -0.28230328  0.56902146  1.34417847 -1.24901505\n",
+      "  -0.88481655]\n",
+      " [-0.16215354  0.59848303 -0.39164756 -0.05466867  0.44152832 -0.50182965\n",
+      "   0.08986262]\n",
+      " [ 0.43738816 -0.77895007 -0.08043479 -0.07771492 -0.80128252  0.60928643\n",
+      "   0.73844251]\n",
+      " [-0.83235768  1.21461978  0.85036636  0.02146355  0.93060101 -1.17897925\n",
+      "  -1.04891739]\n",
+      " [-0.41516647  0.82466054  1.01953221  0.20954193  0.8266023  -0.94475457\n",
+      "  -1.57298355]]\n"
      ]
     }
    ],
@@ -1103,8 +1097,8 @@
     }
    ],
    "source": [
-    "f = data[data.Distance == 11]\n",
-    "f[[0, 1, 2, 3, 8, 9]]"
+    "dist_11 = data[data.Distance == 11]\n",
+    "dist_11[[0, 1, 2, 3, 8, 9]]"
    ]
   },
   {
@@ -1820,8 +1814,8 @@
     }
    ],
    "source": [
-    "x = data[(data.UniqueCarrier == 'OH') & (data.FlightNum == 4988)]\n",
-    "x[[0, 1, 2, 3, 8, 9, 18]]"
+    "plane_OH4988 = data[(data.UniqueCarrier == 'OH') & (data.FlightNum == 4988)]\n",
+    "plane_OH4988[[0, 1, 2, 3, 8, 9, 18]]"
    ]
   },
   {
@@ -1846,7 +1840,7 @@
     }
    ],
    "source": [
-    "x.Distance.value_counts()"
+    "plane_OH4988.Distance.value_counts()"
    ]
   },
   {
@@ -2562,8 +2556,8 @@
     }
    ],
    "source": [
-    "y = data[(data.UniqueCarrier == 'OH') & (data.FlightNum == 5572)]\n",
-    "y[[0, 1, 2, 3, 8, 9, 18]]"
+    "plane_OH5572 = data[(data.UniqueCarrier == 'OH') & (data.FlightNum == 5572)]\n",
+    "plane_OH5572[[0, 1, 2, 3, 8, 9, 18]]"
    ]
   },
   {
@@ -2587,7 +2581,7 @@
     }
    ],
    "source": [
-    "y.Distance.value_counts()"
+    "plane_OH5572.Distance.value_counts()"
    ]
   },
   {
@@ -2647,8 +2641,8 @@
     }
    ],
    "source": [
-    "g = data.groupby('Origin')\n",
-    "g.AirTime.mean().argmax()"
+    "grouped_by_origin = data.groupby('Origin')\n",
+    "grouped_by_origin.AirTime.mean().argmax()"
    ]
   },
   {
@@ -2741,7 +2735,7 @@
     }
    ],
    "source": [
-    "g.size()"
+    "grouped_by_origin.size()"
    ]
   },
   {
@@ -2752,7 +2746,7 @@
    },
    "outputs": [],
    "source": [
-    "h = g.filter(lambda x: len(x) >= 1000)"
+    "filtered = grouped_by_origin.filter(lambda x: len(x) >= 1000)"
    ]
   },
   {
@@ -2771,7 +2765,7 @@
     }
    ],
    "source": [
-    "print(len(data), len(h))"
+    "print(len(data), len(filtered))"
    ]
   },
   {
@@ -2782,7 +2776,7 @@
    },
    "outputs": [],
    "source": [
-    "z = h[h.DepDelay > 0]"
+    "delayed = filtered[filtered.DepDelay > 0]"
    ]
   },
   {
@@ -2865,7 +2859,7 @@
     }
    ],
    "source": [
-    "z.Origin.value_counts()"
+    "delayed.Origin.value_counts()"
    ]
   },
   {
@@ -2948,7 +2942,7 @@
     }
    ],
    "source": [
-    "h.Origin.value_counts()"
+    "filtered.Origin.value_counts()"
    ]
   },
   {
@@ -2959,7 +2953,7 @@
    },
    "outputs": [],
    "source": [
-    "v = z.Origin.value_counts() / h.Origin.value_counts()"
+    "delayed_fraction = delayed.Origin.value_counts() / filtered.Origin.value_counts()"
    ]
   },
   {
@@ -2981,7 +2975,7 @@
     }
    ],
    "source": [
-    "v.argmax()"
+    "delayed_fraction.argmax()"
    ]
   },
   {
